--- a/app/src/main/res/drawable/launch_layout.xml
+++ b/app/src/main/res/drawable/launch_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorAccent" />
+    <item android:drawable="@color/launch_background" />
     <item android:width="165dp"
         android:height="145dp"
         android:gravity="center">
