--- a/app/src/main/res/anim/slide_in.xml
+++ b/app/src/main/res/anim/slide_in.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--从右往左移动父布局的100%宽的距离-->
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromXDelta="100%p"
     android:toXDelta="0"
