--- a/app/src/main/res/drawable/ic_left.xml
+++ b/app/src/main/res/drawable/ic_left.xml
@@ -2,3 +2,4 @@
     android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#ffffff" android:pathData="M705.24,213.37L380.45,510.08l324.79,296.71c11.37,11.3 11.37,29.63 -0,40.94 -11.32,11.33 -29.73,11.33 -41.05,0L318.51,532.03c-6.04,-6.04 -8.63,-14.06 -8.23,-21.95 -0.39,-7.89 2.2,-15.89 8.23,-21.95l345.69,-315.7c11.32,-11.33 29.73,-11.33 41.05,0C716.61,183.72 716.61,202.07 705.24,213.37z"/>
 </vector>
+<!--左箭头-->
