--- a/app/src/main/res/anim/bounce_anim.xml
+++ b/app/src/main/res/anim/bounce_anim.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--由小变大，以自身为中心扩大的动画-->
 <scale xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromYScale="0.1"
     android:fromXScale="0.1"
