--- a/app/src/main/res/drawable/et_cursor.xml
+++ b/app/src/main/res/drawable/et_cursor.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--自定义的输入框的光标-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="2dp"/>
     <solid android:color="@color/myorange"/>
