--- a/app/src/main/res/drawable/input_background_selector.xml
+++ b/app/src/main/res/drawable/input_background_selector.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--输入框边缘细线背景选择器-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_activated="false">
