--- a/app/src/main/res/drawable/rotate_layout_bg.xml
+++ b/app/src/main/res/drawable/rotate_layout_bg.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--登录界面  转圈的\正确的\登录失败  的背景-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
 
