--- a/app/src/main/res/drawable/shape_msg.xml
+++ b/app/src/main/res/drawable/shape_msg.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--底部导航条目的右上角消息背景-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp" />
     <solid android:color="@color/red" />
