--- a/app/src/main/res/layout/activity_change_favorite.xml
+++ b/app/src/main/res/layout/activity_change_favorite.xml
@@ -6,6 +6,7 @@
     android:background="@android:color/transparent"
     android:orientation="horizontal">
 
+    <!--左侧半透明的布局，点击退出当前activity-->
     <LinearLayout
         android:id="@+id/change_favorite_left"
         android:layout_width="0dp"
@@ -16,6 +17,7 @@
 
     </LinearLayout>
 
+    <!--右侧布局，用于切换站点-->
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
