--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,3 +1,4 @@
+<!--登录界面布局-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +14,7 @@
         <RelativeLayout android:id="@+id/main_title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:padding="10dip" >
+            android:padding="@dimen/dp10" >
 
             <ImageView
                 android:layout_width="24dp"
@@ -38,7 +39,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="爱宠APP"
+                android:text="@string/login_title1"
                 android:textColor="#ffffff"
                 android:textSize="26sp" />
 
@@ -46,7 +47,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="爱宠物，爱生活"
+                android:text="@string/login_title2"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -66,7 +67,7 @@
                 layout="@layout/layout_progress"
                 android:layout_width="match_parent"
                 android:layout_marginTop="20dp"
-                android:layout_height="130dip"
+                android:layout_height="130dp"
                 android:visibility="gone" />
 
             <include
@@ -74,7 +75,7 @@
                 layout="@layout/layout_success"
                 android:layout_width="match_parent"
                 android:layout_marginTop="20dp"
-                android:layout_height="130dip"
+                android:layout_height="130dp"
                 android:visibility="gone" />
             <include
                 android:id="@+id/layout_failed"
@@ -91,7 +92,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="忘记密码?"
+                    android:text="@string/forgot_password"
                     android:textColor="#ffffff"
                     android:layout_marginStart="20dp"/>
                 <TextView
@@ -100,7 +101,7 @@
                     android:textAlignment="textEnd"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
-                    android:text="立即注册"
+                    android:text="@string/regist_now"
                     android:textColor="#ffffff" />
             </LinearLayout>
             <TextView
@@ -116,7 +117,7 @@
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:paddingTop="2dp"
-                android:text="登     录"
+                android:text="@string/login_button_text"
                 android:textColor="#ffffff"
                 android:textSize="20sp" />
         </RelativeLayout>
