--- a/app/src/main/res/layout/nav_bottom.xml
+++ b/app/src/main/res/layout/nav_bottom.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--底部导航条布局-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,12 +22,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:iconHeight="24dp"
+            app:iconHeight="@dimen/nav_bottom_icon_size"
             app:iconNormal="?attr/main_icon"
             app:iconSelected="?attr/main_icon"
-            app:iconWidth="24dp"
-            app:itemText="首页"
-            app:itemTextSize="12sp"
+            app:iconWidth="@dimen/nav_bottom_icon_size"
+            app:itemText="@string/nav_bottom_1"
+            app:itemTextSize="@dimen/nav_bottom_font_size"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="?attr/nav_bottom_text_selected_color" />
 
@@ -33,12 +35,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:iconHeight="24dp"
+            app:iconHeight="@dimen/nav_bottom_icon_size"
             app:iconNormal="@mipmap/classify"
             app:iconSelected="@mipmap/classify"
-            app:iconWidth="24dp"
-            app:itemText="分类"
-            app:itemTextSize="12sp"
+            app:iconWidth="@dimen/nav_bottom_icon_size"
+            app:itemText="@string/nav_bottom_2"
+            app:itemTextSize="@dimen/nav_bottom_font_size"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="?attr/nav_bottom_text_selected_color" />
 
@@ -47,12 +49,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:iconHeight="24dp"
+            app:iconHeight="@dimen/nav_bottom_icon_size"
             app:iconNormal="@mipmap/circle"
             app:iconSelected="@mipmap/circle"
-            app:iconWidth="24dp"
-            app:itemText="爱宠圈"
-            app:itemTextSize="12sp"
+            app:iconWidth="@dimen/nav_bottom_icon_size"
+            app:itemText="@string/nav_bottom_3"
+            app:itemTextSize="@dimen/nav_bottom_font_size"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="?attr/nav_bottom_text_selected_color" />
 
@@ -60,12 +62,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:iconHeight="24dp"
+            app:iconHeight="@dimen/nav_bottom_icon_size"
             app:iconNormal="@mipmap/shopping_trolley"
             app:iconSelected="@mipmap/shopping_trolley"
-            app:iconWidth="24dp"
-            app:itemText="购物车"
-            app:itemTextSize="12sp"
+            app:iconWidth="@dimen/nav_bottom_icon_size"
+            app:itemText="@string/nav_bottom_4"
+            app:itemTextSize="@dimen/nav_bottom_font_size"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="?attr/nav_bottom_text_selected_color" />
 
@@ -73,12 +75,12 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:iconHeight="24dp"
+            app:iconHeight="@dimen/nav_bottom_icon_size"
             app:iconNormal="@mipmap/mine"
             app:iconSelected="@mipmap/mine"
-            app:iconWidth="24dp"
-            app:itemText="我的"
-            app:itemTextSize="12sp"
+            app:iconWidth="@dimen/nav_bottom_icon_size"
+            app:itemText="@string/nav_bottom_5"
+            app:itemTextSize="@dimen/nav_bottom_font_size"
             app:textColorNormal="@color/tab_normal_color"
             app:textColorSelected="?attr/nav_bottom_text_selected_color" />
 
