--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,17 +1,17 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- 狗主站主题颜色. -->
     <style name="AppTheme_dog" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary_dog</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_dog</item>
         <item name="colorAccent">@color/colorAccent_dog</item>
         <item name="windowNoTitle">true</item>
-        <item name="main_icon">@mipmap/dog</item>
+        <item name="main_icon">@mipmap/dog</item>//为当前主题是主页左下角导航的图标
+        //主页导航条目被选中时文字的颜色
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_dog</item>
     </style>
+    <!-- 猫主站主题颜色. -->
     <style name="AppTheme_cat" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary_cat</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_cat</item>
         <item name="colorAccent">@color/colorAccent_cat</item>
@@ -19,8 +19,8 @@
         <item name="main_icon">@mipmap/cat</item>
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_cat</item>
     </style>
+    <!-- 鸟主站主题颜色. -->
     <style name="AppTheme_bird" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary_bird</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_bird</item>
         <item name="colorAccent">@color/colorAccent_bird</item>
@@ -28,8 +28,8 @@
         <item name="main_icon">@mipmap/bird</item>
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_bird</item>
     </style>
+    <!-- 鱼主站主题颜色. -->
     <style name="AppTheme_fish" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary_fish</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark_fish</item>
         <item name="colorAccent">@color/colorAccent_fish</item>
@@ -45,8 +45,8 @@
     <style name="LaunchTheme" parent="FullScreenTheme">
         <item name="android:windowBackground">@drawable/launch_layout</item>
     </style>
-    //可以看到上一个activity的主题
 
+    //可以看到上一个activity的主题
     <style name="translucent" parent="FullScreenTheme">
         <item name="android:windowBackground">@color/bg_change_favorite</item>
         <item name="android:windowIsTranslucent">true</item>
