--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.HomeFragment">
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    tools:context=".ui.main_home.HomeFragment">
 
-    <TextView
+    <include
+        android:id="@+id/nav_top"
+        layout="@layout/nav_top"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/nav_bottom_1" />
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/home_tab"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:tabIndicatorColor="?attr/nav_bottom_text_selected_color"
+        app:tabMode="scrollable"
+        android:background="@android:color/white"
+        app:tabSelectedTextColor="?attr/nav_bottom_text_selected_color"
+        app:tabTextColor="@android:color/black" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/home_vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
