--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/colorAccent_dog</item>
         <item name="windowNoTitle">true</item>
         <item name="main_icon">@mipmap/dog</item>//为当前主题是主页左下角导航的图标
+        <item name="nav_bottom_text">@string/favorite_dog</item>
         //主页导航条目被选中时文字的颜色
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_dog</item>
     </style>
@@ -17,6 +18,7 @@
         <item name="colorAccent">@color/colorAccent_cat</item>
         <item name="windowNoTitle">true</item>
         <item name="main_icon">@mipmap/cat</item>
+        <item name="nav_bottom_text">@string/favorite_cat</item>
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_cat</item>
     </style>
     <!-- 鸟主站主题颜色. -->
@@ -26,6 +28,7 @@
         <item name="colorAccent">@color/colorAccent_bird</item>
         <item name="windowNoTitle">true</item>
         <item name="main_icon">@mipmap/bird</item>
+        <item name="nav_bottom_text">@string/favorite_bird</item>
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_bird</item>
     </style>
     <!-- 鱼主站主题颜色. -->
@@ -35,6 +38,7 @@
         <item name="colorAccent">@color/colorAccent_fish</item>
         <item name="windowNoTitle">true</item>
         <item name="main_icon">@mipmap/fish</item>
+        <item name="nav_bottom_text">@string/favorite_fish</item>
         <item name="nav_bottom_text_selected_color">@color/colorPrimary_fish</item>
     </style>
 
