完成"我的"页面，实现滚动动态显隐actionbar ，并修复部分bug

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -50,4 +50,5 @@
     <attr name="main_icon" format="reference"/>
     <attr name="nav_bottom_text_selected_color" format="reference"/>
     <attr name="nav_bottom_text" format="reference"/>
+    <attr name="mine_bg" format="reference"/>
 </resources>
