--- a/app/src/main/res/layout/nav_bottom.xml
+++ b/app/src/main/res/layout/nav_bottom.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/tab_normal_color"/>
+        android:background="@color/divide_line_color"/>
     <com.example.wz.lovingpets.widget.BottomBarLayout
         android:id="@+id/main_bbl"
         android:layout_width="match_parent"
