--- a/app/src/main/res/layout/nav_top.xml
+++ b/app/src/main/res/layout/nav_top.xml
@@ -39,5 +39,5 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_margin="@dimen/dp10"
-        android:src="@mipmap/message" />
+        android:src="@mipmap/message_black" />
 </LinearLayout>
