--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
 
             <include
                 android:id="@+id/input_layout"
-                layout="@layout/input_layout"
+                layout="@layout/input_layout_login"
                 android:layout_width="match_parent"
                 android:layout_height="170dp" />
 
@@ -90,12 +90,14 @@
                 android:layout_below="@+id/input_layout"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/login_tv_forgot_pw"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/forgot_password"
                     android:textColor="#ffffff"
                     android:layout_marginStart="20dp"/>
                 <TextView
+                    android:id="@+id/login_tv_goto_register"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:textAlignment="textEnd"
