--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,156 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--注册页面布局-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/launch_background"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/register_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:padding="@dimen/dp10">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_left" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/register_button_text"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </RelativeLayout>
+
+    <ImageView
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/ic_icon" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@drawable/radius_drawable_bg"
-        android:orientation="vertical"
-        android:padding="10dip">
+        android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/input_rl_un"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@drawable/input_background_selector"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/login_iv_un"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="10dp"
-                android:src="@drawable/ic_username" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/login_title1"
+            android:textColor="#ffffff"
+            android:textSize="26sp" />
 
-            <ImageView
-                android:layout_width="3px"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/login_iv_un"
-                android:background="@android:color/white" />
-
-            <EditText
-                android:id="@+id/login_et_un"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/login_iv_un"
-                android:background="#00000000"
-                android:hint="账号/用户名/邮箱"
-                android:maxLength="16"
-                android:maxLines="1"
-                android:textColorHint="@android:color/white"
-                android:textCursorDrawable="@drawable/et_cursor"
-                android:textSize="16sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/input_rl_pw"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/input_background_selector"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/login_iv_pw"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="10dp"
-                android:src="@drawable/ic_password" />
-
-            <ImageView
-                android:layout_width="3px"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/login_iv_pw"
-                android:background="@android:color/white" />
-
-            <EditText
-                android:id="@+id/login_et_pw"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/login_iv_pw"
-                android:background="#00000000"
-                android:hint="密码"
-                android:inputType="textPassword"
-                android:maxLength="16"
-                android:maxLines="1"
-                android:textColorHint="@android:color/white"
-                android:textCursorDrawable="@drawable/et_cursor"
-                android:textSize="16sp" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/input_rl_code"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/input_background_selector"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/login_iv_verify"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:padding="10dp"
-                android:src="@drawable/ic_verify_code" />
-
-            <ImageView
-                android:layout_width="3px"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/login_iv_verify"
-                android:background="@android:color/white" />
-
-            <EditText
-                android:id="@+id/login_et_verify"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/dp10"
-                android:layout_marginStart="@dimen/dp10"
-                android:layout_toEndOf="@+id/login_iv_verify"
-                android:background="#00000000"
-                android:hint="验证码"
-                android:inputType="number"
-                android:maxLength="6"
-                android:maxLines="1"
-                android:textColorHint="@android:color/white"
-                android:textCursorDrawable="@drawable/et_cursor"
-                android:textSize="16sp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="@dimen/dp10"
-                android:background="@drawable/input_background_selector"
-                android:text="获取验证码"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/sp12" />
-        </RelativeLayout>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/register_title2"
+            android:textColor="#ffffff"
+            android:textSize="16sp" />
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/register_input_layout"
+            layout="@layout/input_layout_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <include
+            android:id="@+id/register_layout_progress"
+            layout="@layout/layout_progress"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/dp20"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/register_layout_success"
+            layout="@layout/layout_success"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/dp20"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/register_layout_failed"
+            layout="@layout/layout_failed"
+            android:layout_width="match_parent"
+            android:layout_height="130dip"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/dp20"
+            android:visibility="gone" />
+    </RelativeLayout>
+
     <TextView
-        android:id="@+id/main_btn_login"
+        android:id="@+id/register_tv_register"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
