--- a/app/src/main/res/layout/input_layout_register.xml
+++ b/app/src/main/res/layout/input_layout_register.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--登录输入框布局-->
+<?xml version="1.0" encoding="utf-8"?><!--输入框布局-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -23,7 +22,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/login_iv_un"
+                android:id="@+id/register_iv_un"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -34,7 +33,7 @@
                 android:layout_width="3px"
                 android:layout_height="25dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/login_iv_un"
+                android:layout_toEndOf="@+id/register_iv_un"
                 android:background="@android:color/white" />
 
             <EditText
@@ -44,9 +43,9 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/dp10"
                 android:layout_marginStart="@dimen/dp10"
-                android:layout_toEndOf="@+id/login_iv_un"
-                android:background="#00000000"
-                android:hint="账号/用户名/邮箱"
+                android:layout_toEndOf="@+id/register_iv_un"
+                android:background="@android:color/transparent"
+                android:hint="@string/register_et_un_hint"
                 android:maxLength="16"
                 android:maxLines="1"
                 android:textColorHint="@android:color/white"
@@ -64,18 +63,20 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/login_iv_pw"
+                android:id="@+id/register_iv_pw"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:padding="@dimen/dp10"
                 android:src="@drawable/ic_password" />
+
             <ImageView
                 android:layout_width="3px"
                 android:layout_height="25dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/login_iv_pw"
+                android:layout_toEndOf="@+id/register_iv_pw"
                 android:background="@android:color/white" />
+
             <EditText
                 android:id="@+id/register_et_pw"
                 android:layout_width="match_parent"
@@ -83,15 +84,69 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/dp10"
                 android:layout_marginStart="@dimen/dp10"
-                android:layout_toEndOf="@+id/login_iv_pw"
+                android:layout_toEndOf="@+id/register_iv_pw"
                 android:background="@android:color/transparent"
-                android:hint="密码"
+                android:hint="@string/et_hint"
                 android:inputType="textPassword"
                 android:maxLength="16"
                 android:maxLines="1"
                 android:textColorHint="@android:color/white"
                 android:textCursorDrawable="@drawable/et_cursor"
                 android:textSize="16sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/input_rl_code"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="@dimen/dp10"
+            android:background="@drawable/input_background_selector"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/register_iv_verify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="@dimen/dp10"
+                android:src="@drawable/ic_verify_code" />
+
+            <ImageView
+                android:layout_width="3px"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/register_iv_verify"
+                android:background="@android:color/white" />
+
+            <EditText
+                android:id="@+id/register_et_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/dp10"
+                android:layout_marginStart="@dimen/dp10"
+                android:layout_toEndOf="@+id/register_iv_verify"
+                android:background="@android:color/transparent"
+                android:hint="@string/et_code_hint"
+                android:inputType="number"
+                android:maxLength="6"
+                android:maxLines="1"
+                android:textColorHint="@android:color/white"
+                android:textCursorDrawable="@drawable/et_cursor"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/register_bt_getcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="@dimen/dp10"
+                android:background="@drawable/input_background_selector"
+                android:text="获取验证码"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp12" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
