--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="dp20">20dp</dimen>
     <dimen name="dp70">70dp</dimen>
     <dimen name="dp30">30dp</dimen>
+    <dimen name="dp50">50dp</dimen>
+    <dimen name="dp24">24dp</dimen>
 </resources>
