--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,10 +18,10 @@
         android:id="@+id/home_tab"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        app:tabIndicatorColor="?attr/nav_bottom_text_selected_color"
+        app:tabIndicatorColor="?attr/colorPrimary"
         app:tabMode="scrollable"
         android:background="@android:color/white"
-        app:tabSelectedTextColor="?attr/nav_bottom_text_selected_color"
+        app:tabSelectedTextColor="?attr/colorPrimary"
         app:tabTextColor="@android:color/black" />
 
     <android.support.v4.view.ViewPager
