--- a/app/src/main/res/layout/nav_top.xml
+++ b/app/src/main/res/layout/nav_top.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="@dimen/dp10"
         android:gravity="center_vertical"
         android:text="?attr/nav_bottom_text"
-        android:textColor="?attr/nav_bottom_text_selected_color" />
+        android:textColor="?attr/colorPrimary" />
     <LinearLayout
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
